# AudioBot

./: .gitignore  README.md
AudioBot/: test_agent.py  test_ollama.py
AudioBot/backend/: cli_chat.py  pyproject.toml  requirements.txt
AudioBot/backend/app/: config.py  main.py  websocket.py
AudioBot/backend/app/agent/: graph.py  nodes.py  state.py  tools.py
AudioBot/backend/audiobot_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
AudioBot/backend/memory/: store.py  test_redis.py
AudioBot/frontend/: app.js  index.html  styles.css  test.html
backend/: cli_audio.py  cli_chat.py  patch_tts.py  pyproject.toml  requirements.txt
backend/app/: config.py  main.py  websocket.py
backend/app/agent/: graph.py  nodes.py  state.py  tools.py
backend/app/audio/: stt.py  tts.py
backend/app/memory/: store.py
backend/memory/: store.py  test_redis.py
frontend/: app.js  app_old.js  audio_test.html  index.html  index_old.html  styles.css  styles_old.css  test.html
