[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "audiobot-backend"
version = "0.1.0"
description = "Backend for AudioBot using FastAPI and LangGraph"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "langgraph",
    "langchain-core",
    "langchain-openai",
    "python-dotenv",
    "websockets",
    "langchain",
    "ollama",
    "langchain-community"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
